--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -3,7 +3,7 @@ on:
   push:
     paths:
       - ".github/workflows/use-secrets.yml"
-
+  workflow_dispatch:
 jobs:
   check-secret:
     runs-on: ubuntu-latest
