--- a/.github/workflows/use-secrets.yml
+++ b/.github/workflows/use-secrets.yml
@@ -13,5 +13,5 @@ jobs:
         id: check-secrets
         uses: ./.github/actions/check-secrets-action
         with:
-          your-secret: ${{ sectets.REPO_PAT }}
+          your-secret: ${{ secrets.REPO_PAT }}
           secrets-context: ${{ toJSON(secrets) }}
